merge release verifier 1.4.1.0-RC8